syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.navercorp.pinpoint.connectionmap.common.proto";
option java_outer_classname = "NetworkMapMessageProto";

option go_package = "pinpoint-network-map/api/proto/v1";

package v1;

enum ConnectionType {
    TCP = 0;
    UDP = 1;
}

enum ConnectionFamily {
    AF_INET_4 = 0;
    AF_INET_6 = 1;
}

enum Direction {
    INCOMING = 0;
    OUTGOING = 1;
    LOCAL = 2;
}

message PConnectionStatsMessage {
    map<int64, PConnectionStatsCollection> connectionStatsCollections = 1;
}

message PConnectionStatsCollection {
    repeated PConnectionStats connectionStats = 1;
}

enum ConnectionState {
    OPEN = 0;
	CLOSED = 1;
	UNKNOWN = 2;
}

message PConnectionStats {
    ConnectionType type = 1;
    ConnectionFamily family = 2;
    ConnectionState state = 3;

    bytes srcIp = 4;
    int32 srcPort = 5;
    bytes dstIp = 6;
    int32 dstPort = 7;

    Direction direction = 8;

    int32 pid = 9;
    bytes pidName = 10;

    int64 monotonicSentBytes = 11;
    int64 sentBytes = 12;

    int64 monotonicRecvBytes = 13;
    int64 recvBytes = 14;

    int32 monotonicRetransmits = 15;
    int32 lastRetransmits = 16;

    int64 lastUpdateEpoch = 17;
    int32 netNs = 18;

}

message PLocalAddressesMessage {
    repeated PLocalIp localIpList = 1;
}

message PLocalIp {
    bytes localIp = 1;
}

message PLocalPidsMessage {
    repeated int32 pids = 1;
}

message PResult {
    bool success = 1;
    string message = 2;
}

